Mise à jour Page1 et Page 2

--- a/Page2.html
+++ b/Page2.html
@@ -2,17 +2,27 @@
     <head>
         <meta charset="utf-8" />
         <title>Premier Essai !</title>
+			<style type ="text/css">
+				div { background-color: orange; 
+					border: 1px solid black; 
+					color: yellow; 
+					font-size: 150%;
+					padding: 1em}		
+	</style>
+
     </head>
     <body>
 		Bonjour tout le monde !<br>
 		fichier d'essai de mise en forme<br>
-		 <div style="background-color:orange; 
-			border:1px solid black; 
-			color:yellow; 
-			font-size:150%; 
-			padding:1em"> 
+		<div> 
 				Cette balise div a du style !
 		</div>
+		<h1>
+			----------------------------
+		</h1>	
+		<div>
+			Et celle-là ?
+		</div>	
 		  
 	</body>
 </html>	
